Finish Results Part (Yeah!)

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -304,7 +304,7 @@ A popular definition of \gls{ml} is attributed to Arthur Samuel describing it as
 In supervised learning, the learning machine is provided with input data as well as the output that is expected for the given input~\cite{introSupervised}. In the classical case of spam filtering, the input can be a collection of emails and the expected output is a label attached to each email that either classifies it as spam or as non-spam. The learning machine is then fed all e-mails as input data and learns to recognise which information in the input is important to produce the correct classification. As the system knows the correct answer for each training input, it can process an email, predict whether or not it is spam, and then use the known answer to change its weights in a way that will make it more likely to lead to a correct prediction and less likely to lead to a false prediction the next time it is presented with similar input.
 
 \subsection{Unsupervised Learning}
-Detecting hidden patterns and structuring data is where unsupervised learning comes into play. Learners of this type don't need to be provided with an expected output while being trained~\cite{introUnsupervised}. A scenario for the application of unsupervised learning is the problem of dividing a customer base into subgroups in order to treat every subgroup according to their specific needs. An employee might help the machine learning system by providing the number of subgroups she wants the system to generate. The learner then builds up its representation of the internal structure of the entire data set with every input it processes. After having processed enough customers, it will most likely have identified the key metrics that distinguish customers into the different groups. 
+Detecting hidden patterns and structuring data is where unsupervised learning comes into play. Learners of this type do not need to be provided with an expected output while being trained~\cite{introUnsupervised}. A scenario for the application of unsupervised learning is the problem of dividing a customer base into subgroups in order to treat every subgroup according to their specific needs. An employee might help the machine learning system by providing the number of subgroups she wants the system to generate. The learner then builds up its representation of the internal structure of the entire data set with every input it processes. After having processed enough customers, it will most likely have identified the key metrics that distinguish customers into the different groups. 
 
 \subsection{Semi-Supervised Learning}
 One use for semi-supervised learning is cluster analysis, which was already used as an example in the previous paragraph. In the case of semi-supervised learning, the system no longer has to work out the different groups (also known as \textit{clusters}) from the unlabelled data alone. Instead, it can use a small set of already labelled customers as a reference and build its internal representation of the entire dataset (labelled and unlabelled) around the clusters indicated by the pre-labelled data. This is especially useful because in many domains collecting or creating labelled data is difficult, expensive, or both~\cite{introSemiSup}.
@@ -477,7 +477,7 @@ The SSD head is the part of the detector that computes category scores and box l
 \begin{figure}[H] % [H] for HERE
 	\centering
 	\includegraphics[width=\textwidth]{figures/ssd_feature_maps_scaling.png}
-	\caption[Detecting Objects at Different Scales Through SSD's Feature Maps]{The combination of bounding boxes in varying aspect ratios and multi-scale feature maps allows the SSD to detect objects in different sizes and orientations.\\
+	\caption[Detecting Objects at Different Scales through SSD's Feature Maps]{The combination of bounding boxes in varying aspect ratios and multi-scale feature maps allows the SSD to detect objects in different sizes and orientations.\\
 		\tiny{Source:~\cite{detectorSSD}}}
 	\label{fig:ssdFeatureMapScaling} % labels always have to be placed after the caption
 \end{figure}
@@ -575,7 +575,7 @@ Since TUM-Lens can run on a multitude of devices with varying combinations of ca
 
 The \code{DetectionActivity} also orchestrates the two most fundamental tasks of the object detection process: object detection and, since the images are derived from a continuos camera stream, object tracking. It instantiates the object \code{detector} of the class \code{TFLiteObjectDetectionAPIModel} to handle the interactions with the TensorFlow Lite \gls{api} and a \code{MultiBoxTracker} object \code{tracker} that tries to assign each rectangle drawn on the screen to its related recognition result across successive input images. This is important because the bounding boxes that are drawn as an overlay on the camera view use different colours for different objects. If no tracking would happen, the colour that is assigned to an object will change randomly with every new image the detector processes. This would be very confusing for the user. Therefore, the recognition results returned by the detector are not directly rendered on the screen but first processed by the \code{tracker}. \\
 
-The \code{tracker} guarantees two properties: Firstly, empty or degenerated recognition results are skipped and not tried to be displayed. Secondly, the 15 colours the \code{tracker} can assign to the remaining objects are  allocated in the same order every time the old drawings are cleared from the canvas and new ones are drawn. This process of detecting objects, clearing old rectangles from the screen and drawing new ones happens with every image the detector processes. While the tracking is far from perfect, the order in which recognitions are returned by the detector stays roughly the same. This happens because they are ordered by the coordinates of their bounding boxes. Depending on the camera settings, the camera can usually stream 30 to 60 frames per second. If the user doesn't move the camera surpassingly fast, the coordinates of the recognition results stay close enough together so that they get assigned the same colour across the changing camera frames. New  objects appearing in the scene (or existing ones becoming larger as the user gets closer) are currently the major cause for inconsistent object colouring. However, as long as no new objects are recognised, the existing ones tend to keep their colours. This is already a great achievement given the tracking is purely based on properties of the TensorFlow Lite \gls{api} and does therefore add effectively non-existent overhead to the object detection pipeline. \\
+The \code{tracker} guarantees two properties: Firstly, empty or degenerated recognition results are skipped and not tried to be displayed. Secondly, the 15 colours the \code{tracker} can assign to the remaining objects are  allocated in the same order every time the old drawings are cleared from the canvas and new ones are drawn. This process of detecting objects, clearing old rectangles from the screen and drawing new ones happens with every image the detector processes. While the tracking is far from perfect, the order in which recognitions are returned by the detector stays roughly the same. This happens because they are ordered by the coordinates of their bounding boxes. Depending on the camera settings, the camera can usually stream 30 to 60 frames per second. If the user does not move the camera surpassingly fast, the coordinates of the recognition results stay close enough together so that they get assigned the same colour across the changing camera frames. New  objects appearing in the scene (or existing ones becoming larger as the user gets closer) are currently the major cause for inconsistent object colouring. However, as long as no new objects are recognised, the existing ones tend to keep their colours. This is already a great achievement given the tracking is purely based on properties of the TensorFlow Lite \gls{api} and does therefore add effectively non-existent overhead to the object detection pipeline. \\
 
 The detection threshold is currently defined in a constant and set to 0.5 in order to display the most relevant objects. Hence, only recognition results received from the \code{detector} that have a confidence score of 0.5 or higher are handed to the \code{tracker}. This further improves the user experience supplementary to the object tracking.
 
@@ -653,74 +653,75 @@ We log the system trace on the test device directly\footnote{\url{https://develo
 	(name = 'imageAvailable' or name = 'recognizeImage' or name = 'DrawFrame')
 \end{lstlisting}
 
-The source code includes carefully placed \code{Trace.beginSection([SectionName])} and \newline \code{Trace.endSection()} function calls so that these events are properly tracked. All timings were measured with the default configuration of using 4 CPU-cores for the object detection which can also be seen in \autoref{fig:perfetto} - the \textit{recognizeImage} slice is traced in the main detection thread and three further threads support it. \\
+The source code includes carefully placed \code{Trace.beginSection([SectionName])} and \newline \code{Trace.endSection()} function calls so that these events are properly tracked. All timings were measured with the default configuration of using 4 CPU-cores for the object detection which can also be seen in \autoref{fig:perfetto} - the \textit{recognizeImage} slice is traced in the main detection thread and three further threads support it.
 
-We imported the output of the Perfetto SQL query into a Microsoft Excel spreadsheet\footnote{For people who don't have excel installed: Google Docs offers a spread sheet functionality under \url{https://docs.google.com/spreadsheets} that can read and manipulate .xlsx files as well} (located in the project repository under \code{thesis > raw\_data > traces > systrace.xlsx}. Two observations can be drawn from \autoref{fig:perfetto} that we want to explain because it puts the measurements into context and makes them easier to understand. \\
-
-\begin{enumerate}
-	\item The device renders images at a fixed rate taking whatever input is currently available. We used the systrace output to verify this and measured an average of 60 frames per seconds to be displayed on the screen. The \code{DrawFrame} tracking event can be found in in \autoref{fig:perfetto} in the row \textit{RenderThread 4025} (its name is cropped because of its short duration).
-	\item The code that contains the \code{imageAvailable} section will be entered every time a new input image is returned from the camera \gls{api}. However, it only executes fully if the previous recognition process has already finished as only one image is processed at a time. In case a new image arrives while an old one is still being processed, the execution of the code that contains the \code{imageAvailable} trace is almost immediately terminated. This behaviour can also be visually tracked in \autoref{fig:perfetto}.
-\end{enumerate}
-
-\subsection{Timing Detections}
-
-We look at the systrace entries of the \code{recognizeImage} event from two different angles. First, we calculate the mean of the duration of the \code{recognizeImage} task which is 36,110,754 nanoseconds. This can be converted to potential frames a detector with this speed provides which is 28 frames per second (fps) on average. This is a decent performance and can definitely be considered real-time (as a reference: movies are usually recorded with 24 fps). Moreover, it is also close to how academic papers usually measure the performance of neural networks. However, this is not congruent with what the user experiences as it implies that the detector is working non-stop - which it does not. Thus, we measure a second metric to access the performance closer to what a user experiences. This second metric measures the average time from the start of one \code{recognizeImage} event to next. Thereby, we automatically include both the additional time needed to retrieve the image from the camera and also the downtime in which no detection is being computed but also no new image data is available. The average time for this metric is 
+\bigskip
 
 \begin{figure}[h] % [H] for HERE
 	\centering
-	\includegraphics[width=\textwidth]{figures/perfetto_visualisation.png}
+	\includegraphics[width=.97\textwidth]{figures/perfetto_visualisation.png}
 	\caption[Screenshot of Visual Systrace Analysis With Perfetto UI]{The image shows a systrace visualisation using the Perfetto UI. The horizontal axis shows the relative time ()starting at 0 seconds) and the vertical axes lists important types of events. These events are sorted to reflect their chronology as close as possible.}
 	\label{fig:perfetto}
 \end{figure}
 
+\newpage
+
+We imported the output of the Perfetto SQL query into a Microsoft Excel spreadsheet\footnote{For people who do not have excel installed: Google Docs offers a spread sheet functionality under \url{https://docs.google.com/spreadsheets} that can read and manipulate .xlsx files as well} (located in the project repository under \code{thesis > raw\_data > traces > systrace.xlsx}. Two observations can be drawn from \autoref{fig:perfetto} that we want to explain because it puts the measurements into context and makes them easier to understand. \\
+
+\begin{enumerate}
+	\item The device renders images at an almost fixed rate taking whatever input is currently available. We used the systrace output to verify this and measured an average of 55 frames per seconds to be displayed on the screen. The \code{DrawFrame} tracking event can be found in in \autoref{fig:perfetto} in the row \textit{RenderThread 4025} (its name is cropped because of its short duration).
+	\item The code that contains the \code{imageAvailable} section will be entered every time a new input image is returned from the camera \gls{api}. However, it only executes fully if the previous recognition process has already finished as only one image is processed at a time. In case a new image arrives while an old one is still being processed, the execution of the code that contains the \code{imageAvailable} trace is almost immediately terminated. This behaviour can also be visually tracked in \autoref{fig:perfetto}.
+\end{enumerate}
+
+\subsection{System Trace Analysis}
+
+We look at the systrace entries of the \code{recognizeImage} event from two different angles. First, we calculate the mean of the duration of the \code{recognizeImage} task which is 36,110,754 nanoseconds (ns). This can be converted to potential frames a detector with this speed provides which is 28 frames per second (fps) on average. This is a decent performance and can definitely be considered real-time (as a reference: movies are usually recorded with 24 fps). Moreover, it is also close to how academic papers usually measure the performance of neural networks. However, this is not congruent with what the user experiences as it implies that the detector is working non-stop - which it does not. Thus, we measure a second metric to access the performance closer to what a user experiences. This second metric measures the average time from the start of one \code{recognizeImage} event to next. Thereby, we automatically include both the additional time needed to retrieve the image from the camera and also the downtime in which no detection is being computed but also no new image data is available. The average time for this metric is 61.500.325 ns translating to around 16 fps. This time is low enough for the bounding boxes to accurately track the corresponding objects and therefore qualifies as real-time. However, it is not low enough for the tracking to appear complete stutter-free which would be the ideal case. The average joint time of a non-aborted \code{imageAvailable} and its subsequent \code{recognizeImage} is 43.100.228 ns or 23 fps. In order to achieve the maximum visible performance on the test device, this time needs to be lowered to less than 15.640.005 ns (or more than 64 fps) which is the average time between \code{DrawFrame} events - while also being in perfect sync with the latter. This is a challenge to be taken on in a new project for someone who wants to optimise the current code for performance or when further detection frameworks become available.
 
 
 \chapter{Outlook}
 
 \section{Possible Applications}
 
-As touched upon in \autoref{chap:motivation}, there are at least two major drivers that will fuel future development efforts. Protecting the sphere of privacy will definitively be a major motivation to build apps running machine learning frameworks locally. We've already introduced this idea by alleging the example of DeepType in \autoref{sec:privacy}. The second driver for an increase in on-device machine learning applications has been introduced in \autoref{sec:offline_usability}. It is the need for machine learners that can act independently of an internet connection. This is important as it is simply impossibly to guarantee such a connection in some circumstances. We will expand this line of thought by adding the requirement for increased speed that some problems have. We will use the following paragraphs to introduce a wide range of potential applications centred around the idea of on-device machine learning partitioned by their major drivers.
+As touched upon in \autoref{chap:motivation}, there are at least two major drivers that will fuel future development efforts. Protecting the sphere of privacy will definitively be a major motivation to build apps running machine learning frameworks locally. We have already introduced this idea by alleging the example of DeepType in \autoref{sec:privacy}. The second driver for an increase in on-device machine learning applications has been introduced in \autoref{sec:offline_usability}. It is the need for machine learners that can act independently of an internet connection. This is important as it is simply impossibly to guarantee such a connection in some circumstances. We will expand this line of thought by adding the requirement for increased speed that some challenges have. We will use the following paragraphs to introduce a wide range of potential applications centred around the idea of on-device machine learning partitioned by their major drivers.
 
 \subsection{Autonomy and Speed Inspired Use Cases}
 
 We will not go into too much detail in this section as this work emphasizes the importance of low latency performance for object detection on Android devices in multiple occasions already. Still, we want to highlight the case of on-device machine learning application requiring both autonomy and speed that will change our life in the most profound way.
 
 \subsubsection{Autonomous Navigation}
-Many applications in the field of autonomous navigation will greatly benefit from both aspects of autonomy and speed. Driving (or rather being chauffeured by) an autonomous vehicle is the showpiece of on-device machine learning. Firstly, it needs the fast reaction time provided by algorithms running on embedded hardware to minimise the distance and thereby time the data needs to travel when it's capture by the cars myriad of sensors. This facilitates the car's decision engine to make decisions in real-time. Given the high speed at which cars can travel and the unpredictability of other traffic participants, it is of utmost importance to react to changes in the environment in real-time. Secondly, a connection to some remote instance that analyses data online might not be given in all situations. Cars must pass tunnels, rural areas might have poor network coverage or the network itself might have an outage due to unforeseen events such as climate catastrophes, terrorist attacks or cyber attacks. In any of these cases, the car must not lose control but be able to continue to navigate smoothly and safely. The core of its data processing and machine learning pipeline must therefore function decoupled form all external networks. \\
+Many applications in the field of autonomous navigation will greatly benefit from both aspects of on-device computation - autonomy and speed. Driving (or rather being chauffeured by) an autonomous vehicle is the showpiece of on-device machine learning. Firstly, it needs the fast reaction time provided by algorithms running on embedded hardware to minimise the distance and thereby time the data needs to travel when it is captured by the cars myriad of sensors. This facilitates the car's decision engine to make decisions in real-time. Given the high speed at which cars can travel and the unpredictability of other traffic participants, it is of utmost importance to react to changes in the environment in real-time. Secondly, a connection to some remote instance that analyses data online might not be given in all situations. Cars must pass tunnels, rural areas might have poor network coverage or the network itself might have an outage due to unforeseen events such as climate catastrophes, terrorist attacks or cyber attacks. In any of these cases, the car must not lose control but be able to continue to navigate smoothly and safely. The core of its data processing and machine learning pipeline must therefore function decoupled form all external networks. \\
 
 Having said this, autonomous cars are not the only use case for navigation relying on on-device machine learning. We can also conceive other areas such as deep see exploration, drone navigation and even space travelling where either offline usage, minimal latency or both is required for successful autonomous navigation.
 
 \subsection{Privacy Inspired Use Cases}
 
-\subsubsection{Protecting Biometric Data}
-Some company like Apple and Snap\footnote{Snap Inc. is the developer of Snapchat, a mobile app known for its various and peculiar filters that users can apply to manipulate the images captured by the smartphone camera.} are already heavily influenced by privacy concerns - at least in specific areas of their business practices. Apple's Face ID is a well-known security feature of Apple's smartphone division. It relies purely on on-device machine learning to pick up all the important details that make a face unique thereby successfully securing the device without transferring sensitive user data to the cloud. Snapchat uses on-device machine learning to power its manifold filters so that user data only gets transmitted once the user actively shares a photo or video via the app. Protecting biometric user data has already become a mainstream use case for big tech companies. However, these large firms can afford to employ a considerable amount of machine learning experts to ensure their artificial neural networks can also run on mobile devices with their limited storage and computing capabilities. Smaller firms, on the other hand, often don't have the capacity to hire many machine learning engineers. It is these firms that exceedingly benefit from on-device machine learning getting ever more accessible and increasingly easy to implement even for small teams.
+\subsubsection{Biometric Data}
+Some company like Apple and Snap\footnote{Snap Inc. is the developer of Snapchat, a mobile app known for its various and peculiar filters that users can apply to manipulate the images captured by the smartphone camera.} are already heavily influenced and driven by privacy concerns - at least in specific areas of their business practices. Apple's Face ID is a well-known security feature of Apple's smartphone and table division. It relies purely on on-device machine learning to pick up all the important details that make a face unique and thereby successfully secures the device without transferring sensitive user data to the cloud. Snapchat uses on-device machine learning to power its manifold filters so that user data only gets transmitted once the user actively shares a photo or video via the app. Protecting biometric user data has already become a mainstream use case for big tech companies. However, these large firms can afford to employ a considerable amount of machine learning experts to ensure their artificial neural networks can also run on mobile devices with their limited storage and computing capabilities. Smaller firms, on the other hand, often do not have the capacity to hire many machine learning engineers. It is these firms that exceedingly benefit from on-device machine learning getting ever more accessible and increasingly easy to implement even for small teams.
 
-\subsubsection{Keeping Health Data Private}
-Since smartphones are just a subcategory of mobile devices, different hardware opens the door for new types of applications. Health care is one industry that can greatly benefit from on-device machine learning as health data is among the data categories that are most worthy of protection. Today, there's already an astonishing variety of devices that capture health data - each of which also comes in a "smart" version that not only collects this data but also sends it to decentralised servers for storage and processing: smart watches, scales, portable \gls{ecg} and \gls{eeg} devices, blood pressure monitors, glucometers, thermometers and many more. Future developments might combine more and more of such tools into personal health companion devices that can capture and track every aspect of our health condition. Combining these various inputs to a coherent assessment of one's health status is an ideal use case for the application of machine learning. Since the data is sensitive and can easily tell a story people might want to keep private, it is a reasonable assumption that there will be a market for health companions that perform their analysis offline without sharing any data with a third party.
+\subsubsection{Health Data}
+Since smartphones are just a subcategory of mobile devices, different hardware opens the door for new types of applications. Health care is an industry that can greatly benefit from on-device machine learning as health data is among the data categories that are most worthy of protection. Today, there is already an astonishing variety of devices that capture health data - each of which also comes in a "smart" version that not only collects this data but also sends it to decentralised servers for storage and processing: smart watches, scales, portable \gls{ecg} and \gls{eeg} devices, blood pressure monitors, glucometers, thermometers and many more. Future developments might combine more and more of such tools into personal health companion devices that can capture and track every aspect of our health condition. Combining these various inputs to a coherent assessment of one's health status is an ideal use case for the application of machine learning. Since the data is sensitive and can easily tell a story people might want to keep private, it is a reasonable assumption that there will be a market for health companions that perform their analysis offline without sharing any data with a third party.
 
 \subsubsection{Further Dimensions}
-Listing all application domains of on-device machine learning would exceed the scope of this work. It can be observed, however, that there's not only the dimension of machine learning task along which different applications can be found (image classification, object detection, natural language processing, ...) but also other dimensions such as hardware on which the machine learning algorithm is deployed (smartphones, gadgets, robots, ...) or industries benefiting from customers being less scared about privacy breaches (entertainment, media, public sector, ...).
+Listing all application domains of on-device machine learning would exceed the scope of this work. It can be observed, however, that there is not only the dimension of machine learning task along which different applications can be found (image classification, object detection, natural language processing, ...) but also other dimensions such as hardware on which the machine learning algorithm is deployed (smartphones, gadgets, robots, ...) or industries benefiting from customers being less scared about privacy breaches (entertainment, media, public sector, ...).
 
 %Organisation von Fotos auf dem Smartphone, ohne dass diese an die Server von Apple, \& Google Co geschickt werden müssen (Gruppieren von Fotos, die zu einem Urlaub gehören, Gesichtserkennung, Objekterkennung)
 
 \section{Future Work}
 
-To finish this work, we want to suggest a variety of topics that have not been covered by this thesis or its predecessor and might be of interest to students at TUM. By doing so, we hope to inspire other students to continue the development of TUM-Lens. In the eyes of the author, this app is a fertile ground for students striving for both challenging and interesting tasks ranging from state of the art mobile development up to training custom neural networks for mobile devices.
+To wrap up this thesis, we want to suggest a variety of topics that have not been covered by this work or its predecessor and might be of interest to students at TUM. By doing so, we hope to inspire other students to continue the development of TUM-Lens. In the eyes of the author, this app is a fertile ground for students striving for both challenging and interesting tasks ranging from state of the art mobile development up to training custom neural networks for mobile devices.
 
-\subsubsection{Replace Deprecated Code And Fix Bugs}
-A first improvement can be the replacement of deprecated code. We have already achieved great progress in modernising the app by migrating it to Kotlin but there is still a significant number of outdated code that can be modernised by the next student working on the TUM-Lens project. Unfortunately, the app is also not entirely bug free. One bug we have found in version 1.0 that we weren't able to fix is the changeability of models once an image has been loaded from storage. This does currently not trigger a re-classification with the newly selected network and should be fixes in a future release.
+\subsubsection{Replace Deprecated Code and Fix Bugs}
+A first improvement can be the replacement of deprecated code. We have already achieved great progress in modernising the app by migrating it to Kotlin but there is still a significant number of outdated code that can be modernised by the next student working on the TUM-Lens project. Unfortunately, the app is also not entirely bug free. One bug we have found in version 1.0 that we were not able to fix is the changeability of models once an image has been loaded from storage. This does currently not trigger a re-classification with the newly selected network and should be fixes in a future release.
 
-\subsubsection{Enable Input Freezing And Analysis of Images Loaded From Storage}
-These tasks primarily aim at aligning object detection features with those available for image classification. Going forward, a double tap while being in object detection mode shall thus freeze the detection process and keep the frozen results on screen. Furthermore, the user shall be able to select an image from the device storage and the app shall display the detected objects from that specific input.
+\subsubsection{Enable Input Freezing and Analysis of Images Loaded from Storage}
+These tasks primarily aim at aligning object detection features with those available for image classification. Going forward, a double tap while being in object detection mode shall thus freeze the detection process and keep the frozen results on screen. Furthermore, the user shall be able to select an image from the device storage and the app shall display the detected objects recognised for that specific input.
 
-\subsubsection{Load New Models From Remote Servers And Increase Number of Available Models}
-This might sound counter-intuitive to the goal of this thesis but downloading models and the corresponding label file from an online resource would further improve the usability of the app. Currently, a new app version needs to be published in order to include a new network within the app. This is the case because as of now all models must be added to the resource folder of the application before it is built. Lastly, the user should have the option to choose from multiple object detection framework available within TUM-Lens just as in the image classification case.
+\subsubsection{Load New Models from Remote Servers and Increase Number of Available Models}
+This might sound counter-intuitive to the goal of this thesis but downloading models and the corresponding label file from an online resource would further improve the usability of the app. Currently, a new app version needs to be published in order to add a new neural network to the app. This is the case because as of now all models must be saved to the assets folder of the application before it is built. Lastly, the user should have the option to choose from multiple object detection framework available within TUM-Lens just as in the image classification case.
 
 \subsubsection{Expand The Set of Features of TUM-Lens}
 
-The final tip is the expansion of the features of the app. With image classification and object detection we already cover to major disciplines in computer vision. In a follow-up project, instance segmentation could be implemented to further increase the capabilities of TUM-Lens. While this would add a entirely new feature, improvements to existing function are also possible. On the easier side of the enhancement spectrum are further customisation options for the user. While he can currently adjust the number of threads to perform the object detection tasks on, more options like changing the minimum confidence threshold a detection must have to be displayed are conceivable. Ranked among the more difficult advancements is the implementation of better tracking than the mechanism currently implemented and described in \autoref{ssec:detectionAndTracking}. \\
-
-%TODO: Think about including customisation features such as changing the number of maximum returned object or the 
+The final tip is the expansion of the features of the app. With image classification and object detection we already cover to major disciplines in computer vision. In a follow-up project, instance segmentation could be implemented to further increase the capabilities of TUM-Lens. While this would add a entirely new feature, improvements to existing function are also possible. On the easier side of the enhancement spectrum are further customisation options for the user. In the current state of the app, the user can adjust the number of threads to utilise for carrying out the object detection tasks. More options like changing the minimum confidence threshold a detection must have to be displayed are also conceivable. Ranked among the more difficult advancements is the implementation of better tracking than the mechanism currently implemented and described in \autoref{ssec:detectionAndTracking}. \\
 
 With every new contribution to TUM-Lens, the number of new directions in which one can take the app is only growing. We therefore encourage fellow students to follow suit and continue to evolve this project.
 
